--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ Table of Content
 */
 
 @import url('https://fonts.googleapis.com/css?family=Anton:300,400,600,800|Nunito:300,400,600,800');
-
 * {
     margin: 0;
     padding: 0;
@@ -116,6 +115,7 @@ body {
     overflow: hidden;
 }
 
+
 /*
 ==========================================
     Preloader
@@ -132,6 +132,7 @@ body {
     left: 0;
     z-index: 9999999;
 }
+
 .loader {
     position: absolute;
     top: 0px;
@@ -224,13 +225,11 @@ body {
         margin-top: 25%;
         height: 10%;
     }
-
     50% {
         background: linear-gradient(to bottom, rgba(223, 103, 198, 1) 0%, rgba(152, 51, 134, 1) 100%);
         height: 100%;
         margin-top: 0%;
     }
-
     100% {
         background: linear-gradient(to bottom, rgba(254, 215, 125, 1) 0%, rgba(247, 172, 4, 1) 100%);
         height: 10%;
@@ -274,11 +273,13 @@ img {
 .section {
     padding-top: 80px;
 }
+
 ::selection {
     background: #ffcd04;
     color: #fff;
     text-shadow: none;
 }
+
 p {
     color: #fff;
     font-size: 16px;
@@ -335,7 +336,6 @@ p {
     background: linear-gradient(to bottom, #ffd679 30%, #f7ac03 70%);
     filter: drop-shadow(0 0px 20px rgba(101, 40, 193, 0.5));
     box-shadow: 0px 0px 2px 1px rgba(247, 172, 4, 0.8);
-
 }
 
 .casino-btn a:hover {
@@ -416,6 +416,7 @@ p {
     cursor: auto;
 }
 
+
 /* ===============================
         Header Part css
 ==================================*/
@@ -428,7 +429,7 @@ p {
 }
 
 .header_area {
-    background: url(../images/other-nav-bg.png);
+    background: url(assets/images/other-nav-bg.png);
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
@@ -542,12 +543,12 @@ p {
     border-radius: 4px;
 }
 
-.navbar-toggler span + span {
+.navbar-toggler span+span {
     margin-top: 4px;
     width: 18px;
 }
 
-.navbar-toggler span + span + span {
+.navbar-toggler span+span+span {
     width: 10px;
 }
 
@@ -567,6 +568,7 @@ p {
 
 
 /* dropdown menu css */
+
 .dropdown-menu {
     padding: 14px 5px;
     width: 180px;
@@ -580,20 +582,19 @@ p {
     -moz-transition: all ease 0.4s;
     -ms-transition: all ease 0.4s;
     -o-transition: all ease 0.4s;
-
 }
 
-.nav .open > a,
-.nav .open > a:focus,
-.nav .open > a:hover {
+.nav .open>a,
+.nav .open>a:focus,
+.nav .open>a:hover {
     background: none;
 }
 
-.dropdown-menu > li {
+.dropdown-menu>li {
     padding: 10px 10px;
 }
 
-.dropdown-menu > li > a {
+.dropdown-menu>li>a {
     font-size: 18px;
     position: relative;
     line-height: 24px;
@@ -601,8 +602,8 @@ p {
     color: #fefefe;
 }
 
-.dropdown-menu > li > a:focus,
-.dropdown-menu > li:hover a {
+.dropdown-menu>li>a:focus,
+.dropdown-menu>li:hover a {
     background: none;
     color: #e8a004 !important;
     font-weight: 600;
@@ -613,7 +614,7 @@ p {
     -o-transition: all ease 0.4s;
 }
 
-.dropdown-menu > li > a {
+.dropdown-menu>li>a {
     color: #fff !important;
     padding: 10px 18px !important;
     text-align: left;
@@ -629,9 +630,9 @@ p {
     transform: translateY(-100%);
 }
 
-.custom_nav ul > li > a:focus:after,
-.custom_nav ul > li.active > a:after,
-.custom_nav ul > li:hover > a:after {
+.custom_nav ul>li>a:focus:after,
+.custom_nav ul>li.active>a:after,
+.custom_nav ul>li:hover>a:after {
     opacity: 1;
 }
 
@@ -641,15 +642,12 @@ p {
         visibility: hidden;
         opacity: 0;
         top: 110%;
-
     }
-
-    .custom_nav ul > li:hover > .dropdown-menu {
+    .custom_nav ul>li:hover>.dropdown-menu {
         opacity: 1;
         visibility: visible;
         top: 145%;
     }
-
     .navbar-right .dropdown-menu {
         right: 0;
         left: 2px;
@@ -657,25 +655,26 @@ p {
     }
 }
 
+
 /* === nav-toggle === */
 
 ul.tog-nav li a {
     opacity: 0 !important;
 }
 
-.full_nav .nav.tog-nav > li {
+.full_nav .nav.tog-nav>li {
     visibility: hidden;
 }
 
-.full_nav .nav > li:last-child {
+.full_nav .nav>li:last-child {
     visibility: visible;
 }
 
-.full_nav .nav > li {
+.full_nav .nav>li {
     visibility: visible;
 }
 
-.navbar-brand > img {
+.navbar-brand>img {
     display: block;
 }
 
@@ -683,8 +682,8 @@ ul.tog-nav li a {
     display: none;
 }
 
-/* == menu css start == */
 
+/* == menu css start == */
 
 nav.navbar .container {
     position: relative;
@@ -710,12 +709,12 @@ nav.navbar .container {
     margin-left: 10px !important;
 }
 
-.full_nav .nav > li {
+.full_nav .nav>li {
     margin: 0 4px;
     padding: 10px 0;
 }
 
-.full_nav .nav > li > a {
+.full_nav .nav>li>a {
     font-size: 18px;
     position: relative;
     line-height: 24px;
@@ -729,8 +728,8 @@ nav.navbar .container {
     text-transform: capitalize;
 }
 
-.full_nav .nav > li a.active,
-.full_nav .nav > li:hover a {
+.full_nav .nav>li a.active,
+.full_nav .nav>li:hover a {
     color: #e8a004;
 }
 
@@ -761,14 +760,14 @@ nav.navbar .container {
     -o-transition: all 0.5s ease;
 }
 
-.full_nav .nav > li:last-child .fa-times {
+.full_nav .nav>li:last-child .fa-times {
     position: absolute;
     top: 11px;
     z-index: -1;
     font-size: 22px;
 }
 
-.full_nav .nav > li:last-child {
+.full_nav .nav>li:last-child {
     cursor: pointer;
     position: absolute;
     right: 285px;
@@ -798,12 +797,14 @@ nav.navbar .container {
 .menu-inner i.fa-align-right {
     opacity: 0;
 }
+
+
 /* ============================= 
        Banner Css 
 ======================================= */
 
 .main_page {
-    background: url(../images/banner-background.jpg);
+    background: url(assets/images/banner-background.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -862,9 +863,11 @@ nav.navbar .container {
     padding-bottom: 30px;
 }
 
+
 /*=====================================
  Counter
 ======================================*/
+
 .conter-res .col-md-1 {
     max-width: 10.333333%;
 }
@@ -921,9 +924,11 @@ nav.navbar .container {
  Counter end 
 ======================================= */
 
+
 /* ===========================================================
     BE IN CONTROL
 =============================================================== */
+
 .control {
     padding-bottom: 80px;
     overflow: hidden;
@@ -956,7 +961,6 @@ nav.navbar .container {
     -moz-transition: all ease 0.5s;
     -ms-transition: all ease 0.5s;
     -o-transition: all ease 0.5s;
-
 }
 
 .control-img img {
@@ -1019,7 +1023,6 @@ nav.navbar .container {
 .control [class*=" flaticon-"]:before,
 .control [class^="flaticon-"]:after,
 .control [class*=" flaticon-"]:after {
-
     margin-left: 0px !important;
     font-size: 70px !important;
 }
@@ -1041,9 +1044,11 @@ nav.navbar .container {
     -o-transition: all ease 0.4s;
 }
 
+
 /* ===========================================================
     HOW TO START
 =============================================================== */
+
 .how-start {
     background: #0b001b;
     padding-bottom: 80px;
@@ -1081,7 +1086,6 @@ nav.navbar .container {
 .start-img [class*=" flaticon-"]:before,
 .start-img [class^="flaticon-"]:after,
 .start-img [class*=" flaticon-"]:after {
-
     margin-left: 0px !important;
     font-size: 40px !important;
 }
@@ -1131,9 +1135,11 @@ nav.navbar .container {
     cursor: auto;
 }
 
+
 /*=====================================
  End of Counter  part css
 =======================================*/
+
 
 /*=====================================
     Related other games Start
@@ -1178,13 +1184,14 @@ nav.navbar .container {
 .project-img {
     padding-bottom: 80px;
 }
+
 .in-project {
     padding-bottom: 38px;
     margin-bottom: -50px;
 }
 
 .project-img .nav-menu {
-/*    margin: 0 3px;*/
+    /*    margin: 0 3px;*/
     -webkit-transition: ease all .5s;
     -moz-transition: ease all .5s;
     -o-transition: ease all .5s;
@@ -1217,12 +1224,15 @@ nav.navbar .container {
     color: #e8a004;
     text-shadow: 0 -1px hsla(0, 0%, 0%, 0.8);
 }
+
 .button-group {
     display: contents;
 }
-.project-img .nav-pills{
+
+.project-img .nav-pills {
     margin-bottom: 40px;
 }
+
 .project-img .heading {
     margin-bottom: 20px;
 }
@@ -1302,7 +1312,6 @@ nav.navbar .container {
 
 .port_img:hover .overlay1 {
     opacity: 1;
-
 }
 
 .port_img:hover img {
@@ -1318,13 +1327,16 @@ nav.navbar .container {
     padding-bottom: 60px;
 }
 
+
 /*=====================================
  End Related other games Css
 =======================================*/
 
+
 /*=====================================
     Start of Unlock Free spin part css
 =======================================*/
+
 .free-spin {
     padding-bottom: 40px;
 }
@@ -1345,12 +1357,16 @@ nav.navbar .container {
     line-height: 24px;
 }
 
+
 /*=====================================
     End of Unlock Free spin  part css
 =======================================*/
+
+
 /*========================================
             Casino Jackpots Start 
 ========================================*/
+
 .jackpots {
     padding-bottom: 60px;
 }
@@ -1367,7 +1383,6 @@ nav.navbar .container {
     background: #150035;
     border: none;
     background-clip: inherit;
-
 }
 
 .touna_left_inner .card.add_border {
@@ -1424,7 +1439,6 @@ nav.navbar .container {
 
 .accordion .add_border:not(:first-of-type):not(:last-of-type) {
     border-bottom: 1px solid #fcb100 !important;
-
 }
 
 .toun_scroll_flag {
@@ -1652,9 +1666,11 @@ nav.navbar .container {
     width: 100%;
 }
 
+
 /*=====================================
     Start of Faq  part css
 =======================================*/
+
 .faq {
     padding-bottom: 80px;
 }
@@ -1693,6 +1709,7 @@ nav.navbar .container {
 .f-padding {
     padding-left: 40px;
 }
+
 .faq .form-group textarea,
 .faq input {
     width: 100%;
@@ -1741,13 +1758,16 @@ nav.navbar .container {
     width: 100%;
 }
 
+
 /*=====================================
     End of Faq  part css
 =======================================*/
 
+
 /*=====================================
     Start of contact  part css
 =======================================*/
+
 .payments ul li {
     float: left;
     padding-right: 11px;
@@ -1778,6 +1798,8 @@ nav.navbar .container {
     letter-spacing: -1px;
     padding-top: 65px;
 }
+
+
 /*
 
 .contact-about .border-effect1 {
@@ -1789,6 +1811,7 @@ nav.navbar .container {
     animation: scan 8s infinite;
 }
 */
+
 
 /*
 .contact-about .border-effect2 {
@@ -1875,7 +1898,6 @@ nav.navbar .container {
 .contact-app [class*=" flaticon-"]:before,
 .contact-app [class^="flaticon-"]:after,
 .contact-app [class*=" flaticon-"]:after {
-
     margin-left: 0px !important;
     font-size: 40px !important;
 }
@@ -2011,7 +2033,6 @@ nav.navbar .container {
 }
 
 .contact .control-pad {
-
     margin-bottom: 30px;
 }
 
@@ -2051,12 +2072,16 @@ nav.navbar .container {
     padding-bottom: 20px;
 }
 
+
 /*=====================================
     End of contact  part css
 =======================================*/
+
+
 /* ====================================
           About Page css
 ========================================*/
+
 .about-page {
     padding-bottom: 80px;
     padding-top: 80px;
@@ -2129,11 +2154,13 @@ nav.navbar .container {
     margin-top: 30px;
 }
 
+
 /* ===============================
            error page
 ==================================*/
+
 .error {
-    background: url(../images/404-image.jpg);
+    background: url(assets/images/404-image.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -2194,12 +2221,14 @@ nav.navbar .container {
     filter: drop-shadow(0 0px 20px rgba(101, 40, 193, 0));
 }
 
+
 /* ==========================================
           contact us page 
 ===============================================*/
+
 .contact-page {
     padding-bottom: 60px;
-    background: url(../images/contact-bg-image.jpg) no-repeat;
+    background: url(assets/images/contact-bg-image.jpg) no-repeat;
     background-position: center;
     background-size: cover;
     position: relative;
@@ -2265,19 +2294,23 @@ nav.navbar .container {
 .contact-page .casino-btn a:hover {
     filter: drop-shadow(0 0px 20px rgba(152, 51, 134, 0.6));
 }
+
 .contact-page .heading:after {
     width: 535px;
     left: 48%;
 }
+
 .contact-page .border-effect1 {
     width: 200px;
     left: 80px;
     animation: scan 8s infinite;
 }
+
 .contact-page .border-effect2 {
     width: 200px;
     right: -70px;
 }
+
 .location ul li {
     font-size: 18px;
     line-height: 24px;
@@ -2304,7 +2337,6 @@ nav.navbar .container {
     transition: all 0.5s ease;
     margin-bottom: 60px;
     color: #fff;
-
 }
 
 .location-txt {
@@ -2317,7 +2349,6 @@ nav.navbar .container {
     font-family: "Nunito", sans-serif;
     color: #fff;
 }
-
 
 .location li i {
     width: 60px;
@@ -2337,28 +2368,30 @@ nav.navbar .container {
     margin-bottom: 60px;
 }
 
+
 /* */
+
 .award-imgfixed {
     position: sticky !important;
     top: 100px;
 }
 
+
 /* ===============================
             animation
 ==================================*/
+
 @keyframes bulb {
     0% {
         -webkit-transform: scale(0.9);
         transform: scale(0.9);
         opacity: 1;
     }
-
     50% {
         -webkit-transform: scale(1);
         transform: scale(1);
         opacity: 0.9;
     }
-
     100% {
         -webkit-transform: scale(0.9);
         transform: scale(0.9);
@@ -2370,11 +2403,9 @@ nav.navbar .container {
     0% {
         transform: translateY(0px);
     }
-
     50% {
         transform: translateY(20px);
     }
-
     100% {
         transform: translateY(0px);
     }
@@ -2384,11 +2415,9 @@ nav.navbar .container {
     0% {
         transform: translateX(-10px);
     }
-
     50% {
         transform: translateX(30px);
     }
-
     100% {
         transform: translateX(-10px);
     }
@@ -2398,11 +2427,9 @@ nav.navbar .container {
     0% {
         transform: translateX(10px);
     }
-
     50% {
         transform: translateX(-30px);
     }
-
     100% {
         transform: translateX(10px);
     }
@@ -2412,11 +2439,9 @@ nav.navbar .container {
     0% {
         transform: rotate(0deg);
     }
-
     50% {
         transform: rotate(50deg);
     }
-
     100% {
         transform: rotate(0deg);
     }
@@ -2426,12 +2451,12 @@ nav.navbar .container {
 /* ======== Sub Header css ======= */
 
 
-
-
 /* ======== hidden==========*/
+
 .hidden {
     display: none;
 }
+
 
 /* === BACK TO TOP CSS == */
 
@@ -2483,72 +2508,58 @@ nav.navbar .container {
     filter: drop-shadow(0 0px 10px rgba(223, 103, 198, 0.3));
 }
 
+
 /* =================================================
                  Animation
 ==================================================*/
-@-webkit-keyframes scan {
 
+@-webkit-keyframes scan {
     from,
     0%,
     100% {
-
         -webkit-transform: translate(0%, 0);
         transform: translate(0%, 0);
     }
-
     50% {
-
         -webkit-transform: translate(130%, 0);
         transform: translate(130%, 0);
     }
 }
 
 @keyframes scan {
-
     from,
     0%,
     100% {
-
         -webkit-transform: translate(0%, 0);
         transform: translate(0%, 0);
     }
-
     50% {
-
         -webkit-transform: translate(130%, 0);
         transform: translate(130%, 0);
     }
 }
 
 @-webkit-keyframes scan2 {
-
     from,
     0%,
     100% {
-
         -webkit-transform: translate(0%, 0);
         transform: translate(0%, 0);
     }
-
     50% {
-
         -webkit-transform: translate(-130%, 0);
         transform: translate(-130%, 0);
     }
 }
 
 @keyframes scan2 {
-
     from,
     0%,
     100% {
-
         -webkit-transform: translate(0%, 0);
         transform: translate(0%, 0);
     }
-
     50% {
-
         -webkit-transform: translate(-130%, 0);
         transform: translate(-130%, 0);
     }
